# temp-monitor

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
doc/: design.adoc
doc/diagrams/: Class_diagram.puml  Sequence_init_diagrams.puml  Sequence_monitoring.puml
hal/: CMakeLists.txt
hal/include/: adc_driver.h  eeprom_driver.h  gpio_driver.h  interruption.h  os.h  timer_driver.h
hal/src/: adc_driver.c  eeprom_driver.c  gpio_driver.c  timer_driver.c
include/: led_controller.h  temp_manager.h
include_cpp/: eeprom_config.h  led_controller.hpp  sensor_factory.hpp  temp_manager.hpp  temp_sensor.hpp
src/: CMakeLists.txt  led_controller.c  main.c  temp_manager.c
src_cpp/: CMakeLists.txt  led_controller.cpp  main.cpp  sensor_factory.cpp  temp_manager.cpp  temp_sensor.cpp
